Clean up the yeoman reference in the scaffolded app

--- a/web/src/main/resources/public/dashboardapp/app/index.html
+++ b/web/src/main/resources/public/dashboardapp/app/index.html
@@ -23,7 +23,6 @@
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
-        <div class="container">
           <div class="navbar-header">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -41,10 +40,8 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
-        </div>
       </div>
     </div>
 
@@ -54,7 +51,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> Yoruba Dictionary</p>
       </div>
     </div>
 
