--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -95,6 +95,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/components/homecomponent/controllers/homeController.js"></script>
         <script src="scripts/components/entrycomponent/controllers/entryController.js"></script>
+        <script src="scripts/components/entrycomponent/controllers/singleEntryController.js"></script>
         <!-- endbuild -->
 </body>
 </html>
