Added the upload form entry

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -96,6 +96,9 @@
         <script src="scripts/components/homecomponent/controllers/homeController.js"></script>
         <script src="scripts/components/entrycomponent/controllers/entryController.js"></script>
         <script src="scripts/components/entrycomponent/controllers/singleEntryController.js"></script>
+        <script src="scripts/components/entrycomponent/controllers/uploadEntryController.js"></script>
+        <script src="scripts/shared/directive/fileModelDirective.js"></script>
+        <script src="scripts/shared/service/fileUploader.js"></script>
         <!-- endbuild -->
 </body>
 </html>
