#4 disabled default spring security config

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -62,7 +62,7 @@
       <li><a href="#/entry/single">Entry Form</a></li>
       <li ng-show="isAdmin"><a href="#/admin">Admin</a></li>
       <br/>
-      <li><a href ng-click="logout()">Logout</a></li>
+      <li><a href ng-click="logoutUser()">Logout</a></li>
       <!--<li>Setting</li>-->
     </ul>
   </div>
