--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -1,136 +1,126 @@
 <!doctype html>
 <html class="no-js">
+
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <!-- build:css(.) styles/vendor.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-  <!-- endbower -->
-  <!-- endbuild -->
-  <!-- build:css(.tmp) styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild -->
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css(.) styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
 </head>
+
 <body ng-app="dashboardappApp" ng-controller="indexLogin">
-<!--[if lt IE 7]>
+    <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
   your browser</a> to improve your experience.</p>
 <![endif]-->
-
-<!-- Add your site or application content here -->
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="navbar-header">
-
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-      <a class="navbar-brand" href="#/">Name Dictionary</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#/">Home</a></li>
-        <!--<li><a ng-href="#/about">About</a></li>-->
-      </ul>
-
-      <div class="input-group search-box" ng-controller="search" ng-show="isAuthenticated">
-        <input type="text" class="form-control" ng-model="searchTerm" placeholder="Currently just a name look up.">
-        <span class="input-group-btn">
+    <!-- Add your site or application content here -->
+    <div class="header">
+        <div class="navbar navbar-default" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#/">Name Dictionary</a>
+            </div>
+            <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#/">Home</a></li>
+                    <!--<li><a ng-href="#/about">About</a></li>-->
+                </ul>
+                <div class="input-group search-box" ng-controller="search" ng-show="isAuthenticated">
+                    <input type="text" class="form-control" ng-model="searchTerm" placeholder="Currently just a name look up.">
+                    <span class="input-group-btn">
           <button ng-click="search()" class="btn btn-default" type="button">Go!</button>
         </span>
-      </div>
-
-
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-
-<div class="container">
-  <div id="sidebar" ng-show="isAuthenticated"> <!-- Show sidebar only if logged in -->
-    <ul>
-      <li><a href="#/list/all">All Names</a></li>
-      <li><a href="#/entry/single">Entry Form</a></li>
-      <li ng-show="isAdmin"><a href="#/admin">Admin</a></li>
-      <br/>
-      <li><a href ng-click="logoutUser()">Logout</a></li>
-      <!--<li>Setting</li>-->
-    </ul>
-  </div>
-  <div id="content">
-    <div ui-view ng-show="isAuthenticated"></div>
-    <login-form ng-show="!isAuthenticated" class="login-form"></login-form>
-  </div>
-</div>
-
-<div class="footer">
-  <p><span class="glyphicon glyphicon-heart"></span> Yoruba Dictionary</p>
-</div>
-
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-<!--<script>-->
-<!--!function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){-->
-<!--(A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),-->
-<!--r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)-->
-<!--}(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
-
-<!--ga('create', 'UA-XXXXX-X');-->
-<!--ga('send', 'pageview');-->
-<!--</script>-->
-
-<!-- build:js(.) scripts/vendor.js -->
-<!-- bower:js -->
-<script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-<script src="bower_components/angular-animate/angular-animate.js"></script>
-<script src="bower_components/angular-cookies/angular-cookies.js"></script>
-<script src="bower_components/angular-resource/angular-resource.js"></script>
-<script src="bower_components/angular-route/angular-route.js"></script>
-<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script src="bower_components/angular-touch/angular-touch.js"></script>
-<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-<!-- endbower -->
-<!-- endbuild -->
-
-<!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/app.js"></script>
-<script src="scripts/controllers/main.js"></script>
-<script src="scripts/controllers/about.js"></script>
-<script src="scripts/components/homecomponent/controllers/homeController.js"></script>
-
-<script src="scripts/components/entrycomponent/controllers/entryController.js"></script>
-<script src="scripts/components/entrycomponent/controllers/singleEntryController.js"></script>
-<script src="scripts/components/entrycomponent/controllers/uploadEntryController.js"></script>
-
-<script src="scripts/components/listcomponent/controllers/listController.js"></script>
-<script src="scripts/components/listcomponent/controllers/listAllController.js"></script>
-<script src="scripts/components/listcomponent/controllers/editNameController.js"></script>
-
-<script src="scripts/components/admincomponent/controllers/adminController.js"></script>
-<script src="scripts/components/admincomponent/controllers/adminCreateUserController.js"></script>
-<script src="scripts/components/admincomponent/controllers/adminAllUsersController.js"></script>
-
-<script src="scripts/shared/directive/fileModelDirective.js"></script>
-<script src="scripts/shared/directive/nameEntryDirective.js"></script>
-<script src="scripts/shared/directive/loginFormDirective.js"></script>
-<script src="scripts/shared/directive/createUserFormDirective.js"></script>
-
-<script src="scripts/shared/service/fileUploader.js"></script>
-<script src="scripts/shared/service/nameEntryService.js"></script>
-<script src="scripts/shared/service/endpointService.js"></script>
-<script src="scripts/shared/service/profileService.js"></script>
-<script src="scripts/shared/service/authService.js"></script>
-<!-- endbuild -->
+    <div class="container">
+        <div id="sidebar" ng-show="isAuthenticated">
+            <!-- Show sidebar only if logged in -->
+            <ul>
+                <li><a href="#/list/all">All Names</a></li>
+                <li><a href="#/entry/single">Entry Form</a></li>
+                <li ng-show="isAdmin"><a href="#/admin">Admin</a></li>
+                <br/>
+                <li><a href ng-click="logoutUser()">Logout</a></li>
+                <!--<li>Setting</li>-->
+            </ul>
+        </div>
+        <div id="content">
+            <div ui-view ng-show="isAuthenticated"></div>
+            <login-form ng-show="!isAuthenticated" class="login-form"></login-form>
+        </div>
+    </div>
+    <div class="footer">
+        <p><span class="glyphicon glyphicon-heart"></span> Yoruba Dictionary</p>
+    </div>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+    <!--<script>-->
+    <!--!function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){-->
+    <!--(A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),-->
+    <!--r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)-->
+    <!--}(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
+    <!--ga('create', 'UA-XXXXX-X');-->
+    <!--ga('send', 'pageview');-->
+    <!--</script>-->
+    <!-- build:js(.) scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/components/homecomponent/controllers/homeController.js"></script>
+    <script src="scripts/components/entrycomponent/controllers/entryController.js"></script>
+    <script src="scripts/components/entrycomponent/controllers/singleEntryController.js"></script>
+    <script src="scripts/components/entrycomponent/controllers/uploadEntryController.js"></script>
+    <script src="scripts/components/listcomponent/controllers/listController.js"></script>
+    <script src="scripts/components/listcomponent/controllers/listAllController.js"></script>
+    <script src="scripts/components/listcomponent/controllers/editNameController.js"></script>
+    <script src="scripts/components/admincomponent/controllers/adminController.js"></script>
+    <script src="scripts/components/admincomponent/controllers/adminCreateUserController.js"></script>
+    <script src="scripts/components/admincomponent/controllers/adminAllUsersController.js"></script>
+    <script src="scripts/shared/directive/notificationDirective.js"></script>
+    <script src="scripts/shared/directive/fileModelDirective.js"></script>
+    <script src="scripts/shared/directive/nameEntryDirective.js"></script>
+    <script src="scripts/shared/directive/loginFormDirective.js"></script>
+    <script src="scripts/shared/directive/createUserFormDirective.js"></script>
+    <script src="scripts/shared/service/fileUploader.js"></script>
+    <script src="scripts/shared/service/nameEntryService.js"></script>
+    <script src="scripts/shared/service/nameAutocompleteService.js"></script>
+    <script src="scripts/shared/service/endpointService.js"></script>
+    <script src="scripts/shared/service/profileService.js"></script>
+    <script src="scripts/shared/service/authService.js"></script>
+    <script src="scripts/shared/service/stubService.js"></script>
+    <!-- endbuild -->
 </body>
+
 </html>
