--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -114,6 +114,7 @@
     <script src="scripts/shared/directive/nameEntryDirective.js"></script>
     <script src="scripts/shared/directive/loginFormDirective.js"></script>
     <script src="scripts/shared/directive/createUserFormDirective.js"></script>
+    <script src="scripts/components/entrycomponent/directives/addMediaDirective.js"></script>
     <script src="scripts/shared/service/fileUploader.js"></script>
     <script src="scripts/shared/service/nameEntryService.js"></script>
     <script src="scripts/shared/service/nameAutocompleteService.js"></script>
@@ -121,6 +122,7 @@
     <script src="scripts/shared/service/profileService.js"></script>
     <script src="scripts/shared/service/authService.js"></script>
     <script src="scripts/shared/service/stubService.js"></script>
+    <script src="scripts/shared/filter/stringsToArrayFilter.js"></script>
     <!-- endbuild -->
 </body>
 
