Temp update dashboard login, till account creation is upgraded to make use of the new security facility

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -48,8 +48,8 @@
                     </div>
                 </div>
             </div>
-            <div ui-view ng-show="isAuthenticated"></div>
-            <login-form ng-show="!isAuthenticated" class="login-form"></login-form>
+            <div ui-view></div>
+            <!-- TODO remove or reuse when dashboard account creation is added <login-form ng-show="!isAuthenticated" class="login-form"></login-form>-->
             <div class="footer">
                 <p><span class="glyphicon glyphicon-heart"></span> Yoruba Dictionary</p>
             </div>
