YOR-24 Fixes repeating values etymology and media

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -11,6 +11,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
+    <link rel="stylesheet" href="bower_components/angularjs-toaster/toaster.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -78,6 +79,8 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angularjs-toaster/toaster.js"></script>
+    <script src="bower_components/angular-bootstrap-show-errors/src/showErrors.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -105,7 +108,7 @@
     <script src="scripts/components/entrycomponent/directives/etymologyDirective.js"></script>
     <script src="scripts/components/entrycomponent/directives/mediaDirective.js"></script>
     <script src="scripts/shared/service/fileUploader.js"></script>
-    <script src="scripts/shared/service/nameEntryService.js"></script>
+    <script src="scripts/shared/service/nameService.js"></script>
     <script src="scripts/shared/service/nameAutocompleteService.js"></script>
     <script src="scripts/shared/service/endpointService.js"></script>
     <script src="scripts/shared/service/profileService.js"></script>
