Updated /v1/search to return json in the improved format

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -106,7 +106,7 @@
     <script src="scripts/components/admincomponent/controllers/adminController.js"></script>
     <script src="scripts/components/admincomponent/controllers/adminCreateUserController.js"></script>
     <script src="scripts/components/admincomponent/controllers/adminAllUsersController.js"></script>
-    <script src="scripts/shared/directive/notificationDirective.js"></script>
+    <!--TODO file not present. Not committed? <script src="scripts/shared/directive/notificationDirective.js"></script>-->
     <script src="scripts/shared/directive/fileModelDirective.js"></script>
     <script src="scripts/shared/directive/nameEntryDirective.js"></script>
     <script src="scripts/shared/directive/loginFormDirective.js"></script>
@@ -115,11 +115,11 @@
     <script src="scripts/components/entrycomponent/directives/mediaDirective.js"></script>
     <script src="scripts/shared/service/fileUploader.js"></script>
     <script src="scripts/shared/service/nameEntryService.js"></script>
-    <script src="scripts/shared/service/nameAutocompleteService.js"></script>
+    <!--TODO file not present. Not committed? <script src="scripts/shared/service/nameAutocompleteService.js"></script>-->
     <script src="scripts/shared/service/endpointService.js"></script>
     <script src="scripts/shared/service/profileService.js"></script>
     <script src="scripts/shared/service/authService.js"></script>
-    <script src="scripts/shared/service/stubService.js"></script>
+    <!--TODO file not present. Not committed?  <script src="scripts/shared/service/stubService.js"></script>-->
     <script src="scripts/shared/filter/stringsToArrayFilter.js"></script>
     <script src="scripts/shared/filter/arrayToStringFilter.js"></script>
     <!-- endbuild -->
