--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
