YOR-71 Updated the dashboard to be able to display feedback messages for an entry and ability to be able to delete all feedback messages

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -109,20 +109,24 @@
     <script src="scripts/components/admincomponent/controllers/adminController.js"></script>
     <script src="scripts/components/admincomponent/controllers/adminCreateUserController.js"></script>
     <script src="scripts/components/admincomponent/controllers/adminAllUsersController.js"></script>
-    <!--TODO file not present. Not committed? <script src="scripts/shared/directive/notificationDirective.js"></script>-->
+
+    <!-- directives -->
     <script src="scripts/shared/directive/fileModelDirective.js"></script>
     <script src="scripts/shared/directive/nameEntryDirective.js"></script>
     <script src="scripts/shared/directive/loginFormDirective.js"></script>
     <script src="scripts/shared/directive/createUserFormDirective.js"></script>
-    <script src="scripts/components/entrycomponent/directives/etymologyDirective.js"></script>
     <script src="scripts/components/entrycomponent/directives/mediaDirective.js"></script>
+    <script src="scripts/components/entrycomponent/directives/etymologyDirective.js"></script>
+    <script src="scripts/components/listcomponent/directives/feedbackDirective.js"></script>
+
+    <!-- services -->
     <script src="scripts/shared/service/fileUploader.js"></script>
     <script src="scripts/shared/service/nameEntryService.js"></script>
-    <!--TODO file not present. Not committed? <script src="scripts/shared/service/nameAutocompleteService.js"></script>-->
     <script src="scripts/shared/service/endpointService.js"></script>
     <script src="scripts/shared/service/profileService.js"></script>
     <script src="scripts/shared/service/authService.js"></script>
-    <!--TODO file not present. Not committed?  <script src="scripts/shared/service/stubService.js"></script>-->
+
+    <!-- filters -->
     <script src="scripts/shared/filter/stringsToArrayFilter.js"></script>
     <script src="scripts/shared/filter/arrayToStringFilter.js"></script>
     <!-- endbuild -->
