--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -71,8 +71,11 @@
         <script src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
         <script src="bower_components/textAngular/dist/textAngular.min.js"></script>
 
-    <!-- yukonApp -->
+        <script src="scripts/libs/utilities.js"></script>
+
+    <!-- dashboardappApp -->
         <script src="scripts/app/app.js"></script>
+        <script src="scripts/app/filter.js"></script>
         <script src="scripts/app/factory.js"></script>
         <script src="scripts/app/service.js"></script>
         <script src="scripts/app/directive.js"></script>
