--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/new.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/new.html
@@ -129,6 +129,7 @@
     <div class="col-lg-6">
 
         <div class="form-group">
+            <h4>Tags</h4>
             <label class="required">Gender</label>
 
             <div class="checkbox">
