--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
@@ -1,5 +1,8 @@
 <div class="row">
     <div class="col-md-3">
+        <a class="btn btn-success btn-sm" ui-sref="auth.users.add_user">Add New User</a>
+    </div>
+    <div class="col-md-3">
         <input id="textFilter" type="text" class="form-control input-sm">
         <span class="help-block">Filter</span>
     </div>
@@ -20,18 +23,18 @@
         <table class="table table-yuk2 toggle-arrow-tiny" id="footable_demo" data-filter="#textFilter" data-page-size="5">
             <thead>
                 <tr>
-                    <th data-toggle="true">Name</th>
+                    <th data-toggle="true">Name/Username</th>
                     <th>Email Address</th>
                     <th data-hide="phone,tablet">Role</th>
-                    <th data-hide="phone,tablet" data-name="Date Of Submission">Submitted</th>
+                    <th data-hide="phone,tablet" data-name="Date Created">Date Created</th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="user in users">
-                    <td><a href="#">{{user.firstname}} {{user.lastname}}</a></td>
-                    <td><a href="#">{{entry.email}}</a></td>
-                    <td>{{entry.roles}}</td>
-                    <td data-value="1"><span class="label label-success status-active" title="Active">{{entry.created_at}}</span></td>
+                <tr ng-repeat="user in userList">
+                    <td><a href="#">{{user.name}} ({{user.username}})</a></td>
+                    <td><a href="#">{{user.email}}</a></td>
+                    <td>{{user.roles}}</td>
+                    <td>{{user.created_at|date}}</td>
                 </tr>
             </tbody>
             <tfoot class="hide-if-no-paging">
