included missing textAngular.css

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -48,6 +48,7 @@
                 </div>
             </div>
         </script>
+        
     <!-- retina images -->
         <script src="bower_components/angular-retina/build/angular-retina.min.js"></script>
     <!-- angular growl -->
@@ -63,11 +64,11 @@
     <!-- scrollbar -->
         <!--link rel="stylesheet" href="bower_components/lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
         <script src="bower_components/lib/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script-->
-    <!-- textAngular -->
 
+    <!-- textAngular -->
         <script src="bower_components/rangy/rangy-core.min.js"></script>
         <script src="bower_components/rangy/rangy-selectionsaverestore.min.js"></script>
-        
+        <link href="bower_components/textAngular/dist/textAngular.css" rel="stylesheet" media="screen">
         <script src="bower_components/textAngular/dist/textAngular-sanitize.min.js"></script>
         <script src="bower_components/textAngular/dist/textAngular.min.js"></script>
 
