--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/users/edit.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/users/edit.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="heading_a"><span class="heading_text">Add A User</span></div>
+        <div class="heading_a"><span class="heading_text">Edit User</span></div>
     </div>
 </div>
 
-<form class="create-user-form" name="form">
+<form class="update-user-form" name="form">
 
 <div class="row">
     <div class="col-lg-6">
@@ -57,7 +57,7 @@
 <div class="row">
     <div class="col-sm-12">
         <hr>
-        <button type="submit" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty" class="btn btn-lg btn-success">Create Account</button>
+        <button type="submit" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty" class="btn btn-lg btn-success">Update Account</button>
     </div>
 </div>
 
