--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/names/edit.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/names/edit.html
@@ -7,6 +7,7 @@
 
 </div>
 
+<form class="name-entry-form" name="form">
 <div class="row">
     <div class="col-lg-6">
         <div class="form-group">
@@ -200,9 +201,9 @@
 <div class="row">
     <div class="col-sm-12">
         <hr>
-        <button type="submit" class="btn btn-lg btn-success">Submit for Review</button>
-        <button type="submit" class="btn btn-lg btn-info">Submit for Later</button>
-        <button type="submit" class="btn btn-lg btn-default">Preview Entry</button>
+        <button type="submit" class="btn btn-lg btn-success" ng-click="submit()" ng-disabled="form.$invalid || !form.$dirty">Submit for Review</button>
+        <button type="submit" class="btn btn-lg btn-default" ng-click="preview()" ng-disabled="form.$invalid || !form.$dirty">Preview Entry</button>
         <a class="btn btn-lg btn-link" ng-click="delete()">Delete Entry</a>
     </div>
 </div>
+</form>
