--- a/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
+++ b/dashboard/src/main/resources/dashboard-client/app/tmpls/users/lists.html
@@ -9,8 +9,9 @@
     <div class="col-md-3">
         <select class="form-control input-sm" ng-change="filterTable(userStatus)" ng-model="userStatus">
             <option></option>
-            <option value="admin">Administrators</option>
-            <option value="volunteer">Volunteers</option>
+            <option value="ROLE_BASIC">Volunteers</option>
+            <option value="ROLE_LEXICOGRAPHER">Lexicographers</option>
+            <option value="ROLE_ADMIN">Administrators</option>
         </select>
         <span class="help-block">Role</span>
     </div>
@@ -20,10 +21,10 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-yuk2 toggle-arrow-tiny" id="footable_demo" data-filter="#textFilter" data-page-size="5">
+        <table class="table table-yuk2 toggle-arrow-tiny" id="users_table" data-filter="#textFilter" data-page-size="5">
             <thead>
                 <tr>
-                    <th data-toggle="true">Name/Username</th>
+                    <th data-toggle="true">Username</th>
                     <th>Email Address</th>
                     <th data-hide="phone,tablet">Role</th>
                     <th data-hide="phone,tablet" data-name="Date Created">Date Created</th>
@@ -31,10 +32,10 @@
             </thead>
             <tbody>
                 <tr ng-repeat="user in userList">
-                    <td><a href="#">{{user.name}} ({{user.username}})</a></td>
-                    <td><a href="#">{{user.email}}</a></td>
+                    <td>{{user.username}}</td>
+                    <td><a ui-sref="auth.users.edit_user({ id: user.id })">{{user.email}}</a></td>
                     <td>{{user.roles}}</td>
-                    <td>{{user.created_at|date}}</td>
+                    <td>{{user.createdAt|date}}</td>
                 </tr>
             </tbody>
             <tfoot class="hide-if-no-paging">
