added path to angular-toastr; removed angular-growl-2

--- a/dashboard/src/main/resources/dashboard-client/app/index.html
+++ b/dashboard/src/main/resources/dashboard-client/app/index.html
@@ -51,9 +51,12 @@
         
     <!-- retina images -->
         <script src="bower_components/angular-retina/build/angular-retina.min.js"></script>
-    <!-- angular growl -->
-        <link href="bower_components/angular-growl-2/build/angular-growl.min.css" rel="stylesheet" media="screen">
-        <script src="bower_components/angular-growl-2/build/angular-growl.min.js"></script>
+    
+    <!-- angular toastr -->
+        <link href="bower_components/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet" media="screen">
+        <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.min.js"></script>
+
+
     <!-- switchery -->
         <script src="bower_components/switchery/dist/switchery.min.js"></script>
         <script src="bower_components/ng-switchery/src/ng-switchery.js"></script>
